--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,83 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{bravo2024ask,
+  title={Ask, Pose, Unite: Scaling Data Acquisition for Close Interactions with Vision Language Models},
+  author={Bravo-S{\'a}nchez, Laura and Heo, Jaewoo and Weng, Zhenzhen and Wang, Kuan-Chieh and Yeung-Levy, Serena},
+  journal={arXiv preprint arXiv:2410.00309},
+  year={2024}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{weng2024diffusion,
+  title={Diffusion-HPC: Synthetic Data Generation for Human Mesh Recovery in Challenging Domains},
+  author={Weng, Zhenzhen and Bravo-S{\'a}nchez, Laura and Yeung-Levy, Serena},
+  booktitle={2024 International Conference on 3D Vision (3DV)},
+  pages={257--267},
+  year={2024},
+  organization={IEEE}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{doi:10.1080/21681163.2021.2002725,
+author = {Cristina González, Laura Bravo-Sanchéz and Pablo Arbeláez},
+title = {Surgical instrument grounding for robot-assisted interventions},
+journal = {Computer Methods in Biomechanics and Biomedical Engineering: Imaging \& Visualization},
+volume = {10},
+number = {3},
+pages = {299--307},
+year = {2022},
+publisher = {Taylor \& Francis},
+doi = {10.1080/21681163.2021.2002725},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{escobar2022smart,
+  title={Smart pooling: AI-powered COVID-19 informative group testing},
+  author={Escobar, Mar{\'\i}a and Jeanneret, Guillaume and Bravo-S{\'a}nchez, Laura and Castillo, Angela and G{\'o}mez, Catalina and Valderrama, Diego and Roa, Mafe and Mart{\'\i}nez, Juli{\'a}n and Madrid-Wolff, Jorge and Cepeda, Martha and others},
+  journal={Scientific Reports},
+  volume={12},
+  number={1},
+  pages={6519},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{huaulme2021micro,
+  title={Micro-surgical anastomose workflow recognition challenge report},
+  author={Huaulm{\'e}, Arnaud and Sarikaya, Duygu and Le Mut, K{\'e}vin and Despinoy, Fabien and Long, Yonghao and Dou, Qi and Chng, Chin-Boon and Lin, Wenjun and Kondo, Satoshi and Bravo-S{\'a}nchez, Laura and others},
+  journal={Computer Methods and Programs in Biomedicine},
+  volume={212},
+  pages={106452},
+  year={2021},
+  publisher={Elsevier}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{ross2021comparative,
+  title={Comparative validation of multi-instance instrument segmentation in endoscopy: results of the ROBUST-MIS 2019 challenge},
+  author={Ro{\ss}, Tobias and Reinke, Annika and Full, Peter M and Wagner, Martin and Kenngott, Hannes and Apitz, Martin and Hempe, Hellena and Mindroc-Filimon, Diana and Scholz, Patrick and Tran, Thuy Nuong and others},
+  journal={Medical image analysis},
+  volume={70},
+  pages={101920},
+  year={2021},
+  publisher={Elsevier}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{gonzalez2020isinet,
+  title={Isinet: an instance-based approach for surgical instrument segmentation},
+  author={Gonz{\'a}lez, Cristina and Bravo-S{\'a}nchez, Laura and Arbelaez, Pablo},
+  booktitle={International Conference on Medical Image Computing and Computer-Assisted Intervention},
+  pages={595--605},
+  year={2020},
+  organization={Springer}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@article{ross2020robust,
+  title={Robust medical instrument segmentation challenge 2019},
+  author={Ross, Tobias and Reinke, Annika and Full, Peter M and Wagner, Martin and Kenngott, Hannes and Apitz, Martin and Hempe, Hellena and Filimon, Diana Mindroc and Scholz, Patrick and Tran, Thuy Nuong and others},
+  journal={arXiv preprint arXiv:2003.10299},
+  year={2020}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{BPPA_FGVC6,
+author = "{L. Bravo, A. Pardo, G. Perez and P. Arbelaez}",
+title = "{Finding Four-Leaf Clovers: A Benchmark for Fine-Grained Object Localization}",
+journal = "{The Sixth Workshop on Fine-Grained Visual Categorization (FGVC6), CVPR 2019.}",
+year = {2019},
 }
