--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,10 @@
   title={Ask, Pose, Unite: Scaling Data Acquisition for Close Interactions with Vision Language Models},
   author={Bravo-S{\'a}nchez, Laura and Heo, Jaewoo and Weng, Zhenzhen and Wang, Kuan-Chieh and Yeung-Levy, Serena},
   journal={arXiv preprint arXiv:2410.00309},
-  year={2024}
+  year={2024},
+  paper={https://arxiv.org/abs/2410.00309},
+  project_page={https://laubravo.github.io/apu_website/},
+  bibtex_show={true},
 }
 
 @inproceedings{weng2024diffusion,
