--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   paper={https://arxiv.org/abs/2410.00309},
   project_page={https://laubravo.github.io/apu_website/},
   bibtex_show={true},
+  selected={true},
 }
 
 @inproceedings{weng2024diffusion,
@@ -16,7 +17,20 @@
   booktitle={2024 International Conference on 3D Vision (3DV)},
   pages={257--267},
   year={2024},
-  organization={IEEE}
+  organization={IEEE},
+  selected={true},
+}
+
+@article{escobar2022smart,
+  title={Smart pooling: AI-powered COVID-19 informative group testing},
+  author={Escobar, Mar{\'\i}a and Jeanneret, Guillaume and Bravo-S{\'a}nchez, Laura and Castillo, Angela and G{\'o}mez, Catalina and Valderrama, Diego and Roa, Mafe and Mart{\'\i}nez, Juli{\'a}n and Madrid-Wolff, Jorge and Cepeda, Martha and others},
+  journal={Scientific Reports},
+  volume={12},
+  number={1},
+  pages={6519},
+  year={2022},
+  publisher={Nature Publishing Group UK London},
+  selected={true},
 }
 
 @article{doi:10.1080/21681163.2021.2002725,
@@ -29,17 +43,6 @@ pages = {299--307},
 year = {2022},
 publisher = {Taylor \& Francis},
 doi = {10.1080/21681163.2021.2002725},
-}
-
-@article{escobar2022smart,
-  title={Smart pooling: AI-powered COVID-19 informative group testing},
-  author={Escobar, Mar{\'\i}a and Jeanneret, Guillaume and Bravo-S{\'a}nchez, Laura and Castillo, Angela and G{\'o}mez, Catalina and Valderrama, Diego and Roa, Mafe and Mart{\'\i}nez, Juli{\'a}n and Madrid-Wolff, Jorge and Cepeda, Martha and others},
-  journal={Scientific Reports},
-  volume={12},
-  number={1},
-  pages={6519},
-  year={2022},
-  publisher={Nature Publishing Group UK London}
 }
 
 @article{huaulme2021micro,
@@ -68,7 +71,8 @@ doi = {10.1080/21681163.2021.2002725},
   booktitle={International Conference on Medical Image Computing and Computer-Assisted Intervention},
   pages={595--605},
   year={2020},
-  organization={Springer}
+  organization={Springer},
+  selected={true},
 }
 
 @article{ross2020robust,
@@ -83,4 +87,5 @@ author = "{L. Bravo, A. Pardo, G. Perez and P. Arbelaez}",
 title = "{Finding Four-Leaf Clovers: A Benchmark for Fine-Grained Object Localization}",
 journal = "{The Sixth Workshop on Fine-Grained Visual Categorization (FGVC6), CVPR 2019.}",
 year = {2019},
+selected={true},
 }
