--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,7 +34,7 @@
 }
 
 @article{doi:10.1080/21681163.2021.2002725,
-author = {Cristina González, Laura Bravo-Sanchéz and Pablo Arbeláez},
+author = {Cristina Gonz\'alez*, Laura Bravo-S\'anchez* and Pablo Arbel\'aez},
 title = {Surgical instrument grounding for robot-assisted interventions},
 journal = {Computer Methods in Biomechanics and Biomedical Engineering: Imaging \& Visualization},
 volume = {10},
