--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,6 +19,10 @@
   year={2024},
   organization={IEEE},
   selected={true},
+  bibtex_show={true},
+  code={https://github.com/ZZWENG/Diffusion_HPC},
+  project_page={https://zzweng.github.io/projects/diffusion_hpc.html},
+  paper={https://arxiv.org/pdf/2303.09541},
 }
 
 @article{escobar2022smart,
@@ -31,6 +35,9 @@
   year={2022},
   publisher={Nature Publishing Group UK London},
   selected={true},
+  bibtex_show={true},
+  paper={https://www.nature.com/articles/s41598-022-10128-9},
+  code={https://github.com/BCV-Uniandes/Smart_Pooling_Scientific_Reports},
 }
 
 @article{doi:10.1080/21681163.2021.2002725,
@@ -43,6 +50,9 @@ pages = {299--307},
 year = {2022},
 publisher = {Taylor \& Francis},
 doi = {10.1080/21681163.2021.2002725},
+selected={false},
+bibtex_show={true},
+paper={https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2002725},
 }
 
 @article{huaulme2021micro,
@@ -67,12 +77,15 @@ doi = {10.1080/21681163.2021.2002725},
 
 @inproceedings{gonzalez2020isinet,
   title={Isinet: an instance-based approach for surgical instrument segmentation},
-  author={Gonz{\'a}lez, Cristina and Bravo-S{\'a}nchez, Laura and Arbelaez, Pablo},
+  author={Gonz{\'a}lez*, Cristina and Bravo-S{\'a}nchez*, Laura and Arbelaez, Pablo},
   booktitle={International Conference on Medical Image Computing and Computer-Assisted Intervention},
   pages={595--605},
   year={2020},
   organization={Springer},
   selected={true},
+  bibtex_show={true},
+  paper={https://arxiv.org/pdf/2007.05533},
+  code={https://github.com/BCV-Uniandes/ISINet},
 }
 
 @article{ross2020robust,
@@ -88,4 +101,9 @@ title = "{Finding Four-Leaf Clovers: A Benchmark for Fine-Grained Object Localiz
 journal = "{The Sixth Workshop on Fine-Grained Visual Categorization (FGVC6), CVPR 2019.}",
 year = {2019},
 selected={true},
+bibtex_show={true},
+project_page={https://www.gperezs.com/projects/flc.html},
+paper={https://drive.google.com/file/d/1RNsGo9rMAqz5Qc38fISueCR7VHoSEM4h/view},
+poster={https://www.gperezs.com/posters/FLC_FGVC6_poster.pdf},
+dataset={https://drive.google.com/file/d/1fq6ZeVg2-CjRtKgcBcnKy9jLfUIabfe8/view?usp=sharing},
 }
