--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,7 +34,7 @@
   pages={6519},
   year={2022},
   publisher={Nature Publishing Group UK London},
-  selected={true},
+  selected={false},
   bibtex_show={true},
   paper={https://www.nature.com/articles/s41598-022-10128-9},
   code={https://github.com/BCV-Uniandes/Smart_Pooling_Scientific_Reports},
