--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
   year={2024},
   paper={https://arxiv.org/abs/2410.00309},
   project_page={https://laubravo.github.io/apu_website/},
+  code={https://laubravo.github.io/apu_website/},
   bibtex_show={true},
   selected={true},
 }
