--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -63,7 +63,8 @@ paper={https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2002725},
   volume={212},
   pages={106452},
   year={2021},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  bibtex_show={true},
 }
 
 @article{ross2021comparative,
@@ -73,7 +74,8 @@ paper={https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2002725},
   volume={70},
   pages={101920},
   year={2021},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  bibtex_show={true},
 }
 
 @inproceedings{gonzalez2020isinet,
@@ -93,7 +95,8 @@ paper={https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2002725},
   title={Robust medical instrument segmentation challenge 2019},
   author={Ross, Tobias and Reinke, Annika and Full, Peter M and Wagner, Martin and Kenngott, Hannes and Apitz, Martin and Hempe, Hellena and Filimon, Diana Mindroc and Scholz, Patrick and Tran, Thuy Nuong and others},
   journal={arXiv preprint arXiv:2003.10299},
-  year={2020}
+  year={2020},
+  bibtex_show={true},
 }
 
 @article{BPPA_FGVC6,
