--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,8 +5,8 @@
   author={Bravo-S{\'a}nchez, Laura and Heo, Jaewoo and Weng, Zhenzhen and Wang, Kuan-Chieh and Yeung-Levy, Serena},
   journal={arXiv preprint arXiv:2410.00309},
   year={2024},
-  paper={https://arxiv.org/abs/2410.00309},
-  project_page={https://laubravo.github.io/apu_website/},
+  pdf={https://arxiv.org/abs/2410.00309},
+  website={https://laubravo.github.io/apu_website/},
   code={https://laubravo.github.io/apu_website/},
   bibtex_show={true},
   selected={true},
@@ -22,8 +22,8 @@
   selected={true},
   bibtex_show={true},
   code={https://github.com/ZZWENG/Diffusion_HPC},
-  project_page={https://zzweng.github.io/projects/diffusion_hpc.html},
-  paper={https://arxiv.org/pdf/2303.09541},
+  website={https://zzweng.github.io/projects/diffusion_hpc.html},
+  pdf={https://arxiv.org/pdf/2303.09541},
 }
 
 @article{escobar2022smart,
@@ -37,7 +37,7 @@
   publisher={Nature Publishing Group UK London},
   selected={false},
   bibtex_show={true},
-  paper={https://www.nature.com/articles/s41598-022-10128-9},
+  pdf={https://www.nature.com/articles/s41598-022-10128-9},
   code={https://github.com/BCV-Uniandes/Smart_Pooling_Scientific_Reports},
 }
 
@@ -53,7 +53,7 @@ publisher = {Taylor \& Francis},
 doi = {10.1080/21681163.2021.2002725},
 selected={false},
 bibtex_show={true},
-paper={https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2002725},
+pdf={https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2002725},
 }
 
 @article{huaulme2021micro,
@@ -87,7 +87,7 @@ paper={https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2002725},
   organization={Springer},
   selected={true},
   bibtex_show={true},
-  paper={https://arxiv.org/pdf/2007.05533},
+  pdf={https://arxiv.org/pdf/2007.05533},
   code={https://github.com/BCV-Uniandes/ISINet},
 }
 
@@ -106,8 +106,8 @@ journal = "{The Sixth Workshop on Fine-Grained Visual Categorization (FGVC6), CV
 year = {2019},
 selected={true},
 bibtex_show={true},
-project_page={https://www.gperezs.com/projects/flc.html},
-paper={https://drive.google.com/file/d/1RNsGo9rMAqz5Qc38fISueCR7VHoSEM4h/view},
+website={https://www.gperezs.com/projects/flc.html},
+pdf={https://drive.google.com/file/d/1RNsGo9rMAqz5Qc38fISueCR7VHoSEM4h/view},
 poster={https://www.gperezs.com/posters/FLC_FGVC6_poster.pdf},
 dataset={https://drive.google.com/file/d/1fq6ZeVg2-CjRtKgcBcnKy9jLfUIabfe8/view?usp=sharing},
 }
