--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   code={https://laubravo.github.io/apu_website/},
   bibtex_show={true},
   selected={true},
+  preview={apu_preview.png},
 }
 
 @inproceedings{weng2024diffusion,
