--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,6 +25,7 @@
   code={https://github.com/ZZWENG/Diffusion_HPC},
   website={https://zzweng.github.io/projects/diffusion_hpc.html},
   pdf={https://arxiv.org/pdf/2303.09541},
+  preview={diffusion_hpc.png},
 }
 
 @article{escobar2022smart,
@@ -40,6 +41,7 @@
   bibtex_show={true},
   pdf={https://www.nature.com/articles/s41598-022-10128-9},
   code={https://github.com/BCV-Uniandes/Smart_Pooling_Scientific_Reports},
+  preview={smart_pooling.png},
 }
 
 @article{doi:10.1080/21681163.2021.2002725,
@@ -55,6 +57,7 @@ doi = {10.1080/21681163.2021.2002725},
 selected={false},
 bibtex_show={true},
 pdf={https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2002725},
+preview={lgi.png},
 }
 
 @article{huaulme2021micro,
@@ -66,6 +69,7 @@ pdf={https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2002725},
   year={2021},
   publisher={Elsevier},
   bibtex_show={true},
+  preview={misaw.png},
 }
 
 @article{ross2021comparative,
@@ -77,6 +81,7 @@ pdf={https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2002725},
   year={2021},
   publisher={Elsevier},
   bibtex_show={true},
+  preview={robust_mis.png},
 }
 
 @inproceedings{gonzalez2020isinet,
@@ -90,14 +95,7 @@ pdf={https://www.tandfonline.com/doi/abs/10.1080/21681163.2021.2002725},
   bibtex_show={true},
   pdf={https://arxiv.org/pdf/2007.05533},
   code={https://github.com/BCV-Uniandes/ISINet},
-}
-
-@article{ross2020robust,
-  title={Robust medical instrument segmentation challenge 2019},
-  author={Ross, Tobias and Reinke, Annika and Full, Peter M and Wagner, Martin and Kenngott, Hannes and Apitz, Martin and Hempe, Hellena and Filimon, Diana Mindroc and Scholz, Patrick and Tran, Thuy Nuong and others},
-  journal={arXiv preprint arXiv:2003.10299},
-  year={2020},
-  bibtex_show={true},
+  preview={isinet.png}
 }
 
 @article{BPPA_FGVC6,
@@ -111,4 +109,5 @@ website={https://www.gperezs.com/projects/flc.html},
 pdf={https://drive.google.com/file/d/1RNsGo9rMAqz5Qc38fISueCR7VHoSEM4h/view},
 poster={https://www.gperezs.com/posters/FLC_FGVC6_poster.pdf},
 dataset={https://drive.google.com/file/d/1fq6ZeVg2-CjRtKgcBcnKy9jLfUIabfe8/view?usp=sharing},
+preview={flc.png}
 }
