--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -85,7 +85,7 @@ preview={lgi.png},
 }
 
 @inproceedings{gonzalez2020isinet,
-  title={Isinet: an instance-based approach for surgical instrument segmentation},
+  title={ISINet: an instance-based approach for surgical instrument segmentation},
   author={Gonz{\'a}lez*, Cristina and Bravo-S{\'a}nchez*, Laura and Arbelaez, Pablo},
   booktitle={International Conference on Medical Image Computing and Computer-Assisted Intervention},
   pages={595--605},
