--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,19 @@
 ---
 ---
 @article{bravo2024ask,
+  title={MicroVQA: A Multimodal Reasoning Benchmark for Microscopy-Based Scientific Research},
+  author={Burgess*, James and Nirschl*, J.H and Bravo-S{\'a}nchez*, Laura and others},
+  journal={CVPR},
+  year={2025},
+  pdf={https://jmhb0.github.io/microvqa/},
+  website={https://jmhb0.github.io/microvqa/},
+  code={https://github.com/jmhb0/microvqa},
+  bibtex_show={true},
+  selected={true},
+  preview={microvqa2.png},
+}
+
+@article{bravo2024ask,
   title={Ask, Pose, Unite: Scaling Data Acquisition for Close Interactions with Vision Language Models},
   author={Bravo-S{\'a}nchez, Laura and Heo, Jaewoo and Weng, Zhenzhen and Wang, Kuan-Chieh and Yeung-Levy, Serena},
   journal={arXiv preprint arXiv:2410.00309},
@@ -12,6 +25,19 @@
   selected={true},
   preview={apu_preview.png},
 }
+
+@article{weng2025harmoni,
+author = {Zhenzhen Weng  and Laura Bravo-S\'anchez  and Zeyu Wang  and Christopher Howard  and Maria Xenochristou  and Nicole Meister  and Angjoo Kanazawa  and Arnold Milstein  and Elika Bergelson  and Kathryn L. Humphreys  and Lee M. Sanders  and Serena Yeung-Levy },
+title = {Artificial intelligence–powered 3D analysis of video-based caregiver-child interactions},
+journal = {Science Advances},
+year = {2025},
+pdf={https://www.science.org/doi/abs/10.1126/sciadv.adp4422},
+code={https://github.com/yeung-lab/HARMONI/tree/main},
+bibtex_show={true},
+selected={true},
+preview={harmoni.png},
+}
+
 
 @inproceedings{weng2024diffusion,
   title={Diffusion-HPC: Synthetic Data Generation for Human Mesh Recovery in Challenging Domains},
