--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 ---
 ---
-@article{bravo2024ask,
+@article{burgess2025microvqa,
   title={MicroVQA: A Multimodal Reasoning Benchmark for Microscopy-Based Scientific Research},
   author={Burgess*, James and Nirschl*, J.H and Bravo-S{\'a}nchez*, Laura and others},
   journal={CVPR},
