update anny + profpic

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,18 @@
 ---
 ---
+@article{bregier2025anny,
+  title={Human Mesh Modeling for Anny Body},
+  author={Br{\'e}gier, Romain and Fiche, Gu{\'e}nol{\'e} and Bravo-S{\'a}nchez, Laura and others},
+  journal={Arxiv},
+  year={2025},
+  pdf={https://arxiv.org/abs/2511.03589},
+  website={https://europe.naverlabs.com/blog/anny-a-free-to-use-3d-human-parametric-model-for-all-ages/},
+  code={https://github.com/naver/anny},
+  bibtex_show={true},
+  selected={true},
+  preview={anny.png},
+}
+
 @article{burgess2025microvqa,
   title={MicroVQA: A Multimodal Reasoning Benchmark for Microscopy-Based Scientific Research},
   author={Burgess*, James and Nirschl*, J.H and Bravo-S{\'a}nchez*, Laura and others},
@@ -16,7 +29,7 @@
 @article{bravo2024ask,
   title={Ask, Pose, Unite: Scaling Data Acquisition for Close Interactions with Vision Language Models},
   author={Bravo-S{\'a}nchez, Laura and Heo, Jaewoo and Weng, Zhenzhen and Wang, Kuan-Chieh and Yeung-Levy, Serena},
-  journal={arXiv preprint arXiv:2410.00309},
+  journal={Synthetic Data for Computer Vision Workshop(CVPR2025)},
   year={2024},
   pdf={https://arxiv.org/abs/2410.00309},
   website={https://laubravo.github.io/apu_website/},
